fixing overspacing

--- a/assets/css/mark.css
+++ b/assets/css/mark.css
@@ -47,6 +47,7 @@ h6 {
 	word-break: break-all !important;
 	margin: 20px 0;
 	padding-bottom: 0.3em;
+	margin-bottom: 0px;
 	line-height: 1.2;
 	text-align: left;
 	font-weight: bold 700;
@@ -85,6 +86,7 @@ a {
 ul,
 ol {
 	padding-left: 30px;
+	margin-top: 0px;
 }
 
 li {
